examples/errors/e0103.sdm
module example <https://example.com/api> is

  import versioned_other <https://example.com/api/v3>

end
